Fixed .container alignment

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   max-width: 800px;
   margin: 0 auto;
   padding: 1.5rem;
-  margin: 2rem;
+  margin-top: 2rem;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
